syntax = "proto3";

package msg;

message Packet {
    enum Sender {
        AGENT = 0;
        CONTROLLER = 1;
    }
    Sender sender = 1;
    int32 code = 2;
    string msg = 3;
    oneof packet {
        Hello hello = 4;
        ScheduleActionConfig schedule = 5;
        Result result = 6;
        KeepAlive keepalive = 7;
        UnscheduleActionConfig unschedule = 8;
        RunActionConfig run = 9;
        AllActionConfigs allConfigs = 10;
    }
}

message AllActionConfigs {
    repeated ScheduleActionConfig configs = 1;
}

message Hello {
    string username = 1;
    string password = 2;
}

message KeepAlive {
    NodeInfo info = 1;
    int64 timestamp = 2;
}

message NodeInfo {
    string id = 1;
    string os = 2;
    string kernel = 3;
    string platform = 4;
    string ip = 5;
    int32 coreCount = 6;
    string hostname = 7;
    int32 majorVersion = 8;
    int32 minorVersion = 9;
    int32 patchVersion = 10;
    int64 startTime = 11;
}

message ScheduleActionConfig {
    ActionConfig config = 1;
    string schedule = 2;
}

message UnscheduleActionConfig {
    ActionConfig config = 1;
}

message RunActionConfig {
    ActionConfig config = 1;
    int64 runtime = 2;
}

message ActionConfig {
    string id = 1;
    int32 action = 2;
    map<string,string> parameters = 3;
}

message Result {
    string id = 1;
    string configId = 2;
    int32 dataCode = 3;
    bytes data = 4;
    map<string,string> tags = 5;
    int64 timestamp = 6;
}